[Core] Fix list of aspect (can't be unmodifiable)